Make grid squares bigger, easier to poke.
Add a generation counter but it won't work from all options yet.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       </button>
       <button id="clear-button" type="button" class="button secondary">Clear
       </button>
+      <p>Statistics</p>
+      <p id="stats-line"></p>
       <!-- Formations Menu -->
       <div class="formation-menu">
         <p>Pre-made Formations</p>
