Adds formation, adds basic localStorage
Adds new 'X' formation, called Khvarenah Bird; adds basic localStorage
for Reset button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li>Create live cells by clicking anywhere on the grid or choose a pre-made formation from the menu on the right.</li>
       <li>Click 'Step' to see the evolution one iteration at a time or 'Start' to watch the evolution progress in real time.</li>
       <li>Click 'Pause' to start/stop the evolution.</li>
+      <li>Use 'Reset' to reset the grid to your last starting condition.</li>
       <li>'Clear' will stop the evolution and clear the grid of all live cells.</li>
     </ul>
 
@@ -46,10 +47,12 @@
       </button>
       <button id="pause-button" type="button" class="button secondary">Pause
       </button>
-      <button id="step-button" type="button" class="button secondary">Step
+      <button id="reset-button" type="button" class="button secondary">Reset
       </button>
       <button id="clear-button" type="button" class="button secondary">Clear
       </button>
+      <button id="step-button" type="button" class="button secondary">Step
+      </button>      
       <!-- Formations Menu -->
       <div class="formation-menu">
         <p>Pre-made Formations</p>
@@ -58,6 +61,8 @@
         <button id="pent-osc" type="button" class="button secondary">Pentadecathlon
         </button>
         <button id="kok-galaxy" type="button" class="button secondary">Kok's Galaxy
+        </button>
+        <button id="khvarenah" type="button" class="button secondary">Khvarenah Bird
         </button>
       </div>
     </div>
