--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <ul>
     <li>Create live cells by clicking anywhere on the grid or choose a pre-made formation from the menu on the right.</li>
-    <li>Click 'Step' to see the evolution one iteration at a time or 'Start' to watch the evolution progress continuously.</li>
+    <li>Click 'Step' to see the evolution one generation at a time or 'Start' to watch the evolution progress continuously.</li>
     <li>Click 'Pause' to start/stop the evolution.</li>
     <li>'Clear' will stop the evolution and clear the grid of all live cells.</li>
   </ul>
@@ -41,13 +41,15 @@
 
   <div class="menu medium-4 columns">
     <!-- Control Buttons -->
-    <button id="start-button" type="button" class="button primary">Start
+    <button id="start-button" type="button" class="button secondary">Start
     </button>
     <button id="pause-button" type="button" class="button secondary">Pause
     </button>
-    <button id="step-button" type="button" class="button secondary">Step
+    <button id="reset-button" type="button" class="button secondary">Reset
     </button>
     <button id="clear-button" type="button" class="button secondary">Clear
+    </button>
+    <button id="step-button" type="button" class="button secondary">Step
     </button>
     <div class="stats-section">
       <p id="stats-line">Generation: 0</p>
