Clean up text and comments a bit.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h1 class="center">Conway's Game of Life</h1>
 
   <ul>
-    <li>Create live cells by clicking anywhere on the grid or choose a pre-made formation from the menu on the right.</li>
+    <li>Create live cells by clicking anywhere on the grid or choose a Pre-made Formation.</li>
     <li>Click 'Step' to see the evolution one generation at a time or 'Start' to watch the evolution progress continuously.</li>
     <li>Click 'Pause' to start/stop the evolution.</li>
     <li>'Clear' will stop the evolution and clear the grid of all live cells.</li>
